# ADOBase

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
adobase/: __init__.py  __main__.py  defaults.json  defaults.py  level.py  params.py  utils.py
adobase/tests/: test_decoration.py  test_event.py  test_level.py  test_level_info.py
