[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ADOBase"
version = "0.1.0"
description = "为 ADOFAI 游戏的 .adofai 关卡文件提供读写、查找、增删改等操作的库"
authors = [
    { name = "memsys-lizi", email = "your_email@example.com" }
]
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
keywords = ["adofai", "level", "json", "game", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
] 